--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -98,9 +98,9 @@ mongodb:
   initdbScriptsConfigMap: rocketchat-mongodb-fix-clustermonitor-role-configmap
 
   auth:
-    # rootPassword:
+    rootPassword: rj45
     username: rocketchat
-    # password:
+    password: rj45
     database: rocketchat
 
   architecture: replicaset
