--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -175,17 +175,20 @@ serviceAccount:
 ### ref : http://kubernetes.io/docs/user-guide/ingress/
 ###
 ingress:
-  enabled: false
+  enabled: true
   pathType: Prefix
   # ingressClassName: "nxinx"
   annotations:
-    {}
-    # kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   path: /
-  tls: {}
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  tls:
+    - secretName: rocketchat-ingress-secret
+      hosts:
+        - rocketchat.apps.sexologvasilenko.com
 
 service:
   annotations: {}
