--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -123,7 +123,7 @@ mongodb:
     ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
     ##   GKE, AWS & OpenStack)
     ##
-    # storageClass: "-"
+    storageClass: "longhorn"
     accessMode: ReadWriteOnce
     size: 8Gi
 
