--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -177,18 +177,18 @@ serviceAccount:
 ingress:
   enabled: true
   pathType: Prefix
-  # ingressClassName: "nxinx"
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-prod
-    kubernetes.io/ingress.class: nginx
-    kubernetes.io/tls-acme: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
-  path: /
+      cert-manager.io/cluster-issuer: "letsencrypt-prod"
+      kubernetes.io/ingress.class: nginx
+  hosts:
+    - host: rocketchat.apps.sexologvasilenko.com
+      paths:
+        - path: /
+          pathType: Prefix
   tls:
-    - secretName: rocketchat-ingress-secret
-      hosts:
+    - hosts:
         - rocketchat.apps.sexologvasilenko.com
+        - secretName: rocketchat-ingress-secret
 
 service:
   annotations: {}
