--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -178,8 +178,11 @@ serviceAccount:
 ingress:
   enabled: true
   annotations:
-      cert-manager.io/cluster-issuer: "letsencrypt-prod"
-      kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
   hosts:
     - host: rocketchat.apps.sexologvasilenko.com
       paths:
