--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -9,7 +9,7 @@ imagePullSecrets: []
 
 ## Host for the application
 ## set it to a domain pointing to your loadbalancer
-# host:
+host: rocketchat.apps.sexologvasilenko.com
 
 replicaCount: 1
 minAvailable: 1
