--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -27,6 +27,10 @@ extraEnv:
   #   value: '{"ssl": "true"}'
   # - name: MONGO_OPLOG_URL
   #   value: mongodb://oploguser:password@rocket-1:27017/local&replicaSet=rs0
+  - name: ADMIN_USERNAME
+    value: admin
+  - name: ADMIN_PASS
+    value: rj45rj45
 
 # Extra volumes for Rocket.Chat...
 extraVolumes:
