--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -35,6 +35,8 @@ extraEnv:
     value: barmaglot92@gmail.com
   - name: OVERWRITE_SETTING_Show_Setup_Wizard
     value: completed
+  - name: OVERWRITE_SETTING_Show_Default_Login_Form
+    value: true
 
 
 # Extra volumes for Rocket.Chat...
