--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -28,7 +28,7 @@ extraEnv:
   # - name: MONGO_OPLOG_URL
   #   value: mongodb://oploguser:password@rocket-1:27017/local&replicaSet=rs0
   - name: INITIAL_USER
-    value: "yes"
+    value: "true"
   - name: ADMIN_USERNAME
     value: "rocketchat"
   - name: ADMIN_PASS
