--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -45,6 +45,8 @@ extraEnv:
     value: "Disabled"
   - name: OVERWRITE_SETTING_Accounts_TwoFactorAuthentication_Enabled
     value: "false"
+  - name: OVERWRITE_SETTING_Accounts_TwoFactorAuthentication_By_Email_Enabled
+    value: "false"
 
     
 
