--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -52,6 +52,10 @@ extraEnv:
   # change in prod
   - name: OVERWRITE_SETTING_API_CORS_Origin
     value: "http://localhost:4000"
+  - name: OVERWRITE_SETTING_FileUpload_ProtectFiles
+    value: "false"
+
+    
 
     
 
