--- a/rocketchat/values.yaml
+++ b/rocketchat/values.yaml
@@ -51,7 +51,7 @@ extraEnv:
     value: "true"
   # change in prod
   - name: OVERWRITE_SETTING_API_CORS_Origin
-    value: "http://localhost:6006, http://localhost:4000, http://localhost:3002"
+    value: "http://localhost:6006, http://localhost:4000, http://localhost:3002, https://frontend-develop-feature-blog.apps.sexologvasilenko.com"
   - name: OVERWRITE_SETTING_Iframe_Restrict_Access
     value: "false"
 
